# T-academy-homework

hw1/: 1_1.py  1_2.py  1_3.py  1_4.py  1_5.py  1_6.py  1_7.py
hw1-hangman/: .gitlab-ci.yml  README.md  pyproject.toml
hw1-hangman/deploy/app-python/: Dockerfile  gitlab-ci.yml
hw1-hangman/doc/: test-example.md
hw1-hangman/src/: UI.py  game.py  main.py  mode.py  prepare.py
hw1-hangman/tests/: test_UI.py  test_game.py  test_main.py  test_mode.py  test_prepare.py
src/: UI.py  game.py  mode.py
tests/: test_game.py  test_main.py  test_mode.py  test_prepare.py
